# hotaru_planner

./: .gitignore  LICENSE  README.md
design/: plan_sequence.puml  planner_structure.puml  refine_sequence.puml
design/hu.sze.aut.hotaru.planner.design/: .project  hu.sze.aut.hotaru.planner.design.notation  hu.sze.aut.hotaru.planner.design.uml
design/ros2/: timer_sequence.puml  update_trajectory.puml
hotaru/autonomous_challenge/parking_scenario/: CMakeLists.txt  package.xml
hotaru/hotaru_autoware_bridge/: CMakeLists.txt  package.xml
hotaru/hotaru_autoware_bridge/src/: hotaru_autoware_bridge_node.cpp
hotaru/hotaru_common/: .gitignore  CMakeLists.txt  package.xml
hotaru/hotaru_common/scripts/: dummy_semantic_line.py  vizualization_plugin.py
hotaru/hotaru_common/test/: test_common.hpp  test_sync_state_machine.cpp
hotaru/hotaru_dwa/: CMakeLists.txt  package.xml
hotaru/hotaru_dwa/dyncfg/: DynamicWindowApproachNode.cfg
hotaru/hotaru_dwa/src/: gen_dynamicwindowapproachnode.cpp  gen_dynamicwindowapproachnode_dyncfg_callback.cpp  hotaru_dwa_node.cpp
hotaru/hotaru_global_planner/: .gitignore  CMakeLists.txt  package.xml
hotaru/hotaru_global_planner/src/: main.cpp
hotaru/hotaru_global_planner/test/: test_global_planner.cpp
hotaru/hotaru_local_planner/: .gitignore  CMakeLists.txt  package.xml
hotaru/hotaru_local_planner/launch/: local_planner.nissan.leaf.launch
hotaru/hotaru_local_planner/src/: hotaru_local_planner_impl.cpp  hotaru_local_planner_node.cpp  interfaceros_hotaru_local_planner.h  teb_local_planner.hpp
hotaru/hotaru_local_planner/test/: test_abs_coord_operation.cpp  test_basic_operation.cpp  test_common.hpp
hotaru/hotaru_local_planner/test-launch/: test-local-planner-basic.launch
hotaru/hotaru_local_planner/test-sim/: test_mpc_following.localtrajectory.launch
hotaru/hotaru_msgs/: CMakeLists.txt  package.xml
hotaru/hotaru_node_elements/: CMakeLists.txt  package.xml
hotaru/hotaru_node_elements/src/: abstract_planner_component.cpp  event_arbiter.cpp  gen_abstracthotaruplannernode_impl.cpp  obstacle_mapper.cpp  trajectory_slicer.cpp
hotaru/hotaru_node_elements/test/: test_trajectory_slicer.cpp  test_velocity_profile.cpp
hotaru/hotaru_planner_msgs/: CMakeLists.txt  package.xml
hotaru/hotaru_planner_msgs/msg/: Trajectory.msg  TrajectoryArray.msg  Waypoint.msg
hotaru/hotaru_planner_node_blocks/: CMakeLists.txt  package.xml
hotaru/hotaru_planner_node_teb/: .gitignore  CMakeLists.txt  package.xml
hotaru/hotaru_planner_node_teb/basic-test-cases/: obstacle-test.json  obstacle2-test.json  relay-test.json
hotaru/hotaru_planner_node_teb/cfg/: default.yaml  teb_lowspeed.yaml
hotaru/hotaru_planner_node_teb/dyncfg/: HotaruTebLocalPlannerNode.cfg
hotaru/hotaru_planner_node_teb/launch/: hotaru_autoware_interface.launch  hotaru_planner_teb.launch  hotaru_system_local_env.launch
hotaru/hotaru_planner_node_teb/param/: default.yaml  teb_leaf_hotaru_planner.yaml  teb_leaf_lowspeed.yaml  teb_lowspeed.yaml
hotaru/hotaru_planner_node_teb/src/: gen_config_hotaruteblocalplannernode.cpp  (+5 more)
hotaru/test_gridmap_planner/: CMakeLists.txt  package.xml
msg/hotaru_msgs/: CMakeLists.txt  package.xml
planner/safe_planner/: package.xml  setup.cfg  setup.py
rei/: CMakeLists.txt
rei/rei_common/: CMakeLists.txt  package.xml
rei/rei_construct_elements/: .cproject  .project  CMakeLists.txt  package.xml
rei/rei_control_msgs/: CMakeLists.txt  package.xml
rei/rei_environment_representation/: CMakeLists.txt  package.xml
rei/rei_event_arbiter/: CMakeLists.txt  package.xml
rei/rei_gazebo_test_orchestrator/: CMakeLists.txt  package.xml
rei/rei_monitoring_msgs/: CMakeLists.txt  package.xml
rei/rei_perception_monitor/: CMakeLists.txt  package.xml
rei/rei_perception_msgs/: CMakeLists.txt  package.xml
rei/rei_perception_nodes/: CMakeLists.txt  package.xml
rei/rei_planner_signals/: CMakeLists.txt  package.xml
rei/rei_recognition_nodes/: CMakeLists.txt  package.xml
rei/rei_robot_configuration_msgs/: CMakeLists.txt  package.xml
rei/rei_robot_configurator/: CMakeLists.txt  package.xml
rei/rei_signal_msgs/: CMakeLists.txt  package.xml
rei/rei_statemachine_library/: CMakeLists.txt  package.xml
rei/rei_statemachine_library/include/rei_statemachine_library/: abstract_signal_definitions.hpp  abstract_statemachine_definitions.hpp
rei/rei_statemachine_library/include/rei_statemachine_library/hybrid_automata/: hybrid_automata.hpp
rei/rei_statemachine_library/include/rei_statemachine_library/port_monitor/: port_monitor.hpp
rei/rei_statemachine_library/include/rei_statemachine_library/portsync_state_machine/: sync_signal.hpp  sync_state_machine.hpp
rei/rei_statemachine_library/include/rei_statemachine_library/ros/: ros_notifier.hpp  ros_sync_state_machine.hpp  state_machine_impl_ros.hpp
rei/rei_statemachine_library/include/rei_statemachine_library/testing/: test_allocation.hpp  test_common.hpp
rei/rei_statemachine_library/src/: abstract_state_machine.cpp  testing_utility_functions.cpp
rei/rei_statemachine_library/src/port_monitor/: port_state_monitor.cpp
rei/rei_statemachine_library/src/sync_state_machine/: sync_state_machine.cpp
rei/rei_statemachine_library/src/sync_state_machine/ros/: example_ros_state_machine.cpp  example_test_publisher.cpp  ros_sync_state_machine.cpp  ros_sync_utils.cpp
rei/rei_statemachine_library/test-launch/rosintegration/: ros_sync_state_machine.launch  ros_sync_state_machine_timeout.launch
rei/rei_statemachine_library/test/port_state_machine/: test_port_state_machine.cpp
rei/rei_statemachine_library/test/ros_integration_tests/: ros_integration_test_commmon.hpp  test_ros_integration_tests.cpp  test_ros_integration_timeout.cpp
rei/rei_statemachine_library/test/sync_state_machine/: test_sync_state_machine.cpp
rei/rei_statemachine_library/test/test_abstract_definitions/: test_abstract_definitions.cpp
rei/rei_sync_monitor/: CMakeLists.txt  package.xml
rei/rei_waypoint_monitor/: .pydevproject  CMakeLists.txt  package.xml
trajectory/: astar.py  dwa.py  eband.py  hybrid_astar.py
(+236 files in other folders)
